Align compact behavior